[tool.poetry]
name = "vnpy"
version = "2.1.7"
description = ""
authors = ["None"]

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
default = true

[tool.poetry.dependencies]
python = "^3.7"
ta-lib = {path = "TA_Lib-0.4.18-cp37-cp37m-win_amd64.whl"}
quickfix = {path = "quickfix-1.15.1-cp37-cp37m-win_amd64.whl"}
ibapi = {url = "https://pip.vnpy.com/colletion/ibapi-9.76.1.tar.gz"}

six = "1.13.0"
pyqt5 = "5.14.1"
qscintilla = "2.11.4"
rqdatac = "^2.9.16"
pyqtgraph = "0.10.0"
wheel = "^0.35.1"
qdarkstyle = "^2.8.1"
requests = "^2.25.0"
websocket-client = "^0.57.0"
peewee = "^3.14.0"
pymysql = "^0.10.1"
psycopg2 = "^2.8.6"
mongoengine = "^0.21.0"
matplotlib = "^3.3.3"
seaborn = "^0.11.0"
futu-api = "^3.27.2"
tigeropen = "^1.2.0"
deap = "^1.3.1"
pyzmq = "^20.0.0"
wmi = "^1.5.1"
plotly = "^4.12.0"
trading-calendars = "^2.0.0"
pandas = "0.24.2"
numpy = "1.16.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
